--- a/charts/cluster/values.yaml
+++ b/charts/cluster/values.yaml
@@ -3,3 +3,5 @@ controllers: 1
 workers: 1
 hostname: "bootstrap"
 k8version: "v1.22.3"
+ip: "10.166.240.217"
+interfacename: "{{ .DefaultNetworkInterfaceName }}"
