--- a/charts/test/testok.yaml
+++ b/charts/test/testok.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
@@ -41,7 +40,7 @@ metadata:
   namespace: default
 spec:
   clusterName: byoh-cluster
-  replicas: {{ .Values.workers }}
+  replicas: 3
   selector:
     matchLabels: null
   template:
@@ -59,7 +58,7 @@ spec:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: ByoMachineTemplate
         name: byoh-cluster-md-0
-      version: {{ .Values.k8version }}
+      version: v1.22.3
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
@@ -98,9 +97,9 @@ spec:
             - name: vip_leaderelection
               value: "true"
             - name: vip_address
-              value: {{ .Values.ip }}
+              value: 10.166.240.217
             - name: vip_interface
-              value: {{ .Values.interfacename }}
+              value: {{ .DefaultNetworkInterfaceName }}
             - name: vip_leaseduration
               value: "15"
             - name: vip_renewdeadline
@@ -148,8 +147,8 @@ spec:
       kind: ByoMachineTemplate
       name: byoh-cluster-control-plane
       namespace: default
-  replicas: {{ .Values.controllers }}
-  version: {{ .Values.k8version }}
+  replicas: 3
+  version: v1.22.3
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: ByoCluster
@@ -158,9 +157,9 @@ metadata:
   namespace: default
 spec:
   bundleLookupBaseRegistry: projects.registry.vmware.com/cluster_api_provider_bringyourownhost
-  bundleLookupTag: {{ .Values.k8version }}
+  bundleLookupTag: v1.22.4
   controlPlaneEndpoint:
-    host: {{ .Values.ip }}
+    host: 10.166.240.217
     port: 6443
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
